2005-05-24 Magnus Hagdorn
 * glide_lithot.f90: improve initial conditions
 * test_lithot.f90: make it somewhat more interesting
 * gthf.tex: added documentation
 * grid.tex, temp.tex: added some lables
 * num.tex: hooked up gthf docu
 * Makefile.am: ditto
 * num.tex: fixed version string

2005-05-24 Magnus Hagdorn
 * glide_types.f90: add switch for GTHF calculations, add number of
   timesteps for spinning up GTHF calculations
 * glide_lithot.f90: sort out spin-up routine, initially set temp of top 
   layer to zero
 * glide_setup.f90: add configuration stuff for GTHF
 * glide.f90: only call GTHF routines if enabled in config file
 * eis_glide.f90: hook up GTHF calc and move climate calc
 * simple_glide.f90: ditto
 

2005-05-23 Magnus Hagdorn
 * glide_types.f90: change litho temp calculations to use 20 layers and
   a base at -5000m, allocate one extra element for sparse matrices
 * glide_mask.f90: set mask at margin
 * glide_lithot.f90: simplify sparse matrix setup with if statements since
   it's only calculated once, fix bugs in RHS
   potential BUG: I think there might be a factor of 2 missing somewhere,
   simple diffusion takes twice as long as I would expect...
 * test_lithot.f90: simple prog testing diffusion calcs
 * Makefile.am: hooked up test_lithot.f90

2005-05-20 Magnus Hagdorn
 * glide_lithot.f90: fixed bug calling CG solver, added routine for
   calculating geothermal heat flux
 * glide.f90: glide_lithot is loaded into module
 * simple_glide.f90: quick hack, need to initialise surf temps before
   lithosphere is initialised

2005-05-20 Magnus Hagdorn
 * glimmer_sparse.f90: new module for handling sparse matrices
 * Makefile.am: added glimmer_sparse.f90 to libglimmer sources
 * glide_vars.def: added litho temp
 * glide_types.f90: added sparse matrices and vectors for CG
 * glide_lithot.f90: calculate sparse matrix and hook up solver
   doesn't work yet
 * glide.f90: added lithot calculations

2005-05-18 Magnus Hagdorn